tests/ppapi_browser/bad/ppapi_bad_ppp_instance_didcreate.nmf
{
  "nexes": {
    "x86-32": "ppapi_bad_ppp_instance_didcreate_x86-32.nexe",
    "x86-64": "ppapi_bad_ppp_instance_didcreate_x86-64.nexe",
    "arm": "ppapi_bad_ppp_instance_didcreate_arm.nexe"
  }
}
